<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:id="@+id/drawer"
    tools:context=".Main3Activity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/sky"
        android:layout_height="match_parent">

      <!--  <ViewFlipper
            android:layout_width="400dp"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="4dp"
            android:id="@+id/viewflipper"
            android:layout_height="200dp">

        </ViewFlipper>-->
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="0dp"

            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--  <com.smarteist.autoimageslider.SliderView
               android:id="@+id/imageSlider"
               android:layout_width="match_parent"
               android:layout_height="300dp"
               app:sliderAnimationDuration="600"
               app:sliderAutoCycleDirection="back_and_forth"
               app:sliderAutoCycleEnabled="true"
               app:sliderIndicatorAnimationDuration="600"
               app:sliderIndicatorGravity="center_horizontal|bottom"
               app:sliderIndicatorMargin="15dp"
               app:sliderIndicatorOrientation="horizontal"
               app:sliderIndicatorPadding="3dp"
               app:sliderIndicatorRadius="2dp"
               app:sliderIndicatorSelectedColor="@color/blue"
               app:sliderIndicatorUnselectedColor="@color/orange"
               app:sliderScrollTimeInSec="1"
               app:sliderStartAutoCycle="true" />-->

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/banner_slider"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"

                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="0dp"
                app:sliderIndicatorRadius="0dp"
                app:sliderIndicatorSelectedColor="@color/blue"
                app:sliderIndicatorUnselectedColor="@color/orange"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true"
                />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:id="@+id/toolbar"
            android:elevation="4dp"
            />


    </RelativeLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="3"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="300dp"
        android:background="@color/design_default_color_primary_dark"
        android:padding="5dp"
        >

        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:gravity="fill_vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="0dp"
            android:layout_height="90dp"

            >


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="3dp"
                android:id="@+id/reportId"

                >
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical"
                   android:gravity="center"
                   >
                   <ImageView
                       android:layout_width="64dp"
                       android:layout_height="65dp"
                       android:padding="10dp"
                       android:background="@drawable/circlebggreen"
                       app:srcCompat="@drawable/ic_action_report">

                   </ImageView>
                   <View
                       android:layout_width="match_parent"
                       android:layout_height="2dp"
                       android:layout_margin="10dp"
                       android:background="@color/green"
                       >

                   </View>
                  <TextView
                      android:textAppearance="?textAppearanceLargePopupMenu"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="5dp"
                      android:text="@string/report"
                      android:textColor="@color/green"
                      android:textStyle="bold"
                      android:layout_marginTop="5dp"
                      >

                  </TextView>

               </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="3dp"
                android:id="@+id/recordId"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="65dp"
                        android:padding="10dp"
                        android:background="@drawable/circlebgpurple"
                        app:srcCompat="@drawable/ic_action_record"
                        >

                    </ImageView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_margin="10dp"
                        android:background="@color/purple"
                        >

                    </View>
                    <TextView
                        android:textAppearance="?textAppearanceLargePopupMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/record"
                        android:textColor="@color/purple"
                        android:layout_marginLeft="5dp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        >

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="3dp"
                android:id="@+id/prescriptId"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="65dp"
                        android:padding="10dp"
                        android:background="@drawable/circlebgsky"
                        app:srcCompat="@drawable/ic_action_prescrip"
                        >

                    </ImageView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_margin="10dp"
                        android:background="@color/sky"
                        >

                    </View>
                    <TextView
                        android:textAppearance="?textAppearanceLargePopupMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Prescript"
                        android:textColor="@color/sky"
                        android:layout_marginLeft="5dp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        >

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:gravity="fill_vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="90dp"

            >

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="3dp"
                android:id="@+id/visitId"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="65dp"
                        android:padding="10dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/circlebgblue"
                        app:srcCompat="@drawable/ic_action_visit"
                        >

                    </ImageView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginBottom="50dp"
                        android:layout_margin="10dp"
                        android:background="@color/blue"
                        >

                    </View>
                    <TextView
                        android:textAppearance="?textAppearanceLargePopupMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visit"
                        android:layout_marginLeft="2dp"
                        android:layout_marginBottom="19dp"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        >

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="3dp"
                android:id="@+id/reminderId"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="65dp"
                        android:padding="10dp"
                        android:background="@drawable/circlebgpink"
                        app:srcCompat="@drawable/ic_action_reminder"
                        >

                    </ImageView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_margin="10dp"
                        android:background="@color/pink"
                        >

                    </View>
                    <TextView
                        android:textAppearance="?textAppearanceLargePopupMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/pink"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        >

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_margin="3dp"
                android:id="@+id/scheduleId"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="65dp"
                        android:padding="10dp"
                        android:background="@drawable/cicrlebgorange"
                        app:srcCompat="@drawable/ic_action_schedule"
                        >

                    </ImageView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_margin="10dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/orange"
                        >

                    </View>
                    <TextView
                        android:textAppearance="?textAppearanceLargePopupMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/orange"
                        android:textStyle="bold"
                        android:paddingRight="5dp"
                        android:layout_marginTop="5dp"
                        >

                    </TextView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:id="@+id/navigation_drawer"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/menu_item"
        android:layout_gravity="start"
        />
</androidx.drawerlayout.widget.DrawerLayout>